--- a/about.html
+++ b/about.html
@@ -9,7 +9,7 @@
 <body>
     <header>
     <h1>Mighty Ducks Hockey League</h1>
-    <img src="./assets/Logo Mighty ducks-01.png" alt="logo de Mighty Ducks Hockey League" Id="logo">
+    <img src="./assets/images/Logo Mighty ducks-01.png" alt="logo de Mighty Ducks Hockey League" Id="logo">
     </header>
     <nav>
         <a href="./index.html">Home</a>
@@ -18,7 +18,7 @@
     </nav>
     <main>
         <div>
-            <img src="./assets/hockey  2.jpg">
+            <img src="./assets/images/hockey  2.jpg">
         </div>
         <h2>Mision</h2>
         <p>To support young athletes living Chicago's northside neighborhood, who have an interest in
