--- a/contact.html
+++ b/contact.html
@@ -9,7 +9,7 @@
 <body>
     <header>
     <h1>Mighty Ducks Hockey League</h1>
-    <img src="./assets/Logo Mighty ducks-01.png" alt="logo de Mighty Ducks Hockey League" Id="logo">
+    <img src="./assets/images/Logo Mighty ducks-01.png" alt="logo de Mighty Ducks Hockey League" Id="logo">
     </header>
     <nav>
         <a href="./index.html">Home</a>
@@ -17,7 +17,7 @@
         <a href="#">Contact</a>
     </nav>
     <main>
-<img src="./assets/hockey 3.jpg">
+<img src="./assets/images/hockey 3.jpg">
 <p>Please email us at <a href="mdhl@chihockey.org">mdhl@chihockey.org</a>
     We reply to your email as soon as we can.</p>
     </main>
