--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <header>
     <h1>Mighty Ducks Hockey League</h1>
-    <img src="./assets/Logo Mighty ducks-01.png" alt="logo de Mighty Ducks Hockey League" Id="logo">
+    <img src="./assets/images/Logo Mighty ducks-01.png" alt="logo de Mighty Ducks Hockey League" Id="logo">
     </header>
     <nav>
         <a href="#">Home</a>
@@ -18,7 +18,7 @@
     </nav>
     <main>
         <div>
-            <img src="./assets/hockey  1.jpg" alt="Hockey game" id="foto 1">
+            <img src="./assets/images/hockey  1.jpg" alt="Hockey game" id="foto 1">
         </div>
         <div>
             <h2>Upcoming Events</h2>
