task 2 actualizacion imagenes

--- a/about.html
+++ b/about.html
@@ -47,7 +47,7 @@
                     neighborhood. MDHL ran by o small full-time staff, and relies on the generous volunteer time of
                     parents and previous league members</p>
             </div>
-
+        <img src="./assets/images/hockey_2.jpg" alt="hockey game">
         </section>
         
        
