--- a/contact.html
+++ b/contact.html
@@ -36,7 +36,7 @@
                 <p>Please email us at <a href="mdhl@chihockey.org">mdhl@chihockey.org</a></p>
                 <p>We reply to your email as soon as we can.</p>
             </div>
-
+            <img src="./assets/images/hockey_3.jpg" alt="two players playing">
         </section>
         
        
