--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <h2 class="titulosecundario">Upcoming Events</h2>
         <section>
             <div class="img-cont">
-            <img src="./assets/images/Logo Mighty ducks-01.png" alt="Logo" id="logo">
+            <img src="./assets/images/Logo_Mightyducks-01.png" alt="Logo" id="logo">
             </div>
             <div class="txt-cont">
                 <h3>August 4</h3>
@@ -40,6 +40,7 @@
                 <h3>September 1</h3>
                 <p>First Game of the Season (Check Game Schedule for details)</p>
             </div>
+            <img src="./assets/images/hockey_1.jpg" alt="hockey player">
 
         </section>
         
