--- a/about.html
+++ b/about.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mighty Ducks Hockey League</title>
     <link rel="stylesheet" href="./assets/css/style.css">
+    <link rel="shortcut icon" href="./assets/images/favicon.ico" type="image/x-icon">
 </head>
 <body>
     <header>
@@ -30,7 +31,7 @@
         <h2 class="titulosecundario">About</h2>
         <section>
             <div class="img-cont">
-            <img src="./assets/images/Logo Mighty ducks-01.png" alt="Logo" id="logo">
+            <img src="./assets/images/Logo_Mightyducks-01.png" alt="Logo" id="logo">
             </div>
             <div class="txt-cont">
                 <h2>Mision</h2>
