--- a/contact.html
+++ b/contact.html
@@ -9,7 +9,6 @@
     <link rel="shortcut icon" href="./assets/images/favicon.ico" type="image/x-icon">
 </head>
 <body>
-    <header>
         <header>
             <div class="imagen-header">
                 <img src="./assets/images/design1_image2.jpg" alt="imagen central">
@@ -32,10 +31,11 @@
         <div class="divdelogo">
             <div class="img-cont">
                 <img src="./assets/images/Logo_Mightyducks-01.png" alt="Logo" id="logo">
-                <img src="./assets/images/hockey_3.jpg">
+                <img src="./assets/images/hockey_3.jpg" alt="hockey players">
             </div>
         </div>
         <section>
+            <h2>Contact us</h2>
             <div class="txt-cont">
                 <p>Please email us at <a href="mailto:mdhl@chihockey.org">mdhl@chihockey.org</a></p>
                 <p>We reply to your email as soon as we can.</p>
