--- a/about.html
+++ b/about.html
@@ -10,7 +10,6 @@
 </head>
 <body>
     <header>
-        <header>
             <div class="imagen-header">
                 <img src="./assets/images/design1_image2.jpg" alt="imagen central">
             </div>
@@ -32,7 +31,7 @@
         <div class="divdelogo">
             <div class="img-cont">
                 <img src="./assets/images/Logo_Mightyducks-01.png" alt="Logo" id="logo">
-                <img src="./assets/images/hockey_2.jpg">
+                <img src="./assets/images/hockey_2.jpg" alt="hockey game">
             </div>
         </div>
         <section>
