--- a/schedule.html
+++ b/schedule.html
@@ -10,7 +10,6 @@
 </head>
 <body>
     <header>
-        <header>
             <div class="imagen-header">
                 <img src="./assets/images/design1_image2.jpg" alt="imagen central">
             </div>
@@ -35,6 +34,7 @@
             </div>
         </div>
         <section>
+            <h2>Schedule</h2>
             <div class="txt-cont">
                 <table>
                     <thead>
