--- a/GameRules.html
+++ b/GameRules.html
@@ -21,6 +21,7 @@
                         <a class="nav-link" href="./contact.html">Contact</a>
                         <a class="nav-link" href="#">Game Rules</a>
                         <a class="nav-link" href="./schedule.html">Schedule</a>
+                        <a class="nav-link" href="./form.html">Registration</a>
                 </nav>
             </div>
        
@@ -82,3 +83,5 @@
         </section>
         </div>
     </main>
+</body>
+</html>
