--- a/contact.html
+++ b/contact.html
@@ -21,6 +21,7 @@
                         <a class="nav-link" href="#">Contact</a>
                         <a class="nav-link" href="./GameRules.html">Game Rules</a>
                         <a class="nav-link" href="./schedule.html">Schedule</a>
+                        <a class="nav-link" href="./form.html">Registration</a>
                 </nav>
                 </div>
        
@@ -43,3 +44,5 @@
         </section>
          </div>
     </main>
+</body>
+</html>
