--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
                         <a class="nav-link" href="./contact.html">Contact</a>
                         <a class="nav-link" href="./GameRules.html">Game Rules</a>
                         <a class="nav-link" href="./schedule.html">Schedule</a>
+                        <a class="nav-link" href="./form.html">Registration</a>
                 </nav>
                 </div>
        
@@ -46,3 +47,5 @@
         </section>
          </div>
     </main>
+    </body>
+</html>
