task4 sin plceholder

--- a/form.html
+++ b/form.html
@@ -63,7 +63,7 @@
                     
                     <div class="contenedor-birthdate">
                     <label for="birthdate-tbx">Birth Date (mm/dd/yyyy):</label>
-                    <input id="birthdate-tbx" type="date" name="birthdate" placeholder="mm-dd-yyyy">
+                    <input id="birthdate-tbx" type="date" name="birthdate">
                                     
                     <label >Gender:</label>
                     <label for="male-rbt">Male</label>
